--- a/templates/student_portal.html
+++ b/templates/student_portal.html
@@ -1,11 +1,115 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Student Portal</title>
-</head>
-<body>
-    <a href="logout">Logout {{ username }}</a>
-    {{ data }}
-</body>
+    <head>
+        <meta charset="UTF-8">
+        <title>Student Portal</title>
+        <style type="text/css">
+            body {
+                margin:0;
+                margin-top:0;
+                padding:0;
+                top:0
+            }
+            div#header {
+                background:teal;
+                color:white;
+                font-family:Inconsolata,Constantia,Verdana,sans-serif;
+                font-size: 1em;
+                text-align: center;
+                line-height: 1;
+                padding:1%;
+            }
+            a#logoutLink {
+                text-decoration:none;
+                color:teal;
+                font-weight:bold;
+                font-size:0.8em;
+                background:white;
+                padding:2px;
+            }
+            a#logoutLink:hover {
+                text-decoration: underline;
+            }
+            #header table {
+                width:90%;
+            }
+            td.bigSpan {
+                text-indent:25%;
+                width: 90%;
+                vertical-align: bottom;
+            }
+            td.smallSpan{
+                vertical-align: bottom;
+                text-align: right;
+            }
+            div#content-main{
+                margin-left:5%;
+                margin-right:5%;
+                line-height:1.5;
+            }
+            a.linkButton{
+                text-decoration: none;
+                background:teal;
+                color:white;
+                font-weight:bold;
+                font-family:'Lucida Sans',Helvetica;
+                font-size:0.8em;
+                padding:3px 6px;
+                border-radius:10px;
+            }
+            table.tests_display {
+                width:75%;
+                padding:1%;
+            }
+            table.tests_display td{
+                text-align: center;
+                padding:0.5%;
+                border:2px solid black;
+            }
+            table.tests_display th{
+                background:teal;
+                font-size:1.1em;
+                color:white;
+                font-family:inherit;
+                padding:1%;
+            }
+            h4 {
+                text-decoration:underline;
+            }
+        </style>
+    </head>
+    <body>
+        <div id="header">
+            <table>
+                <tr>
+                    <td align="center" class="bigSpan">
+                        <h2> Student Assessment </h2>
+                        <h3><u> Student Portal </u></h3>
+                    </td>
+                    <td align="right" class="smallSpan">
+                        <a href="logout" id="logoutLink">Logout {{ username }}</a>
+                    </td>
+                </tr>
+            </table>
+        </div>
+        <div id="content-main">
+            <h4> Code Tests </h4>
+            <table id="code_tests_table" border="2">
+                <tr>
+                    <th> Test Name </th>
+                    <th> Test ID </th>
+                    <th> Faculty </th>
+                    <th> </th>
+                </tr>
+                {% for test in tests %}
+                    <tr>
+                        <td>  {{ test.test_name }} </td>
+                        <td>  {{ test.test_id }} </td>
+                        <td> {{ test.faculty_id_id }} </td>
+                        <td> <a href="tests/{{ test.test_id }}/"> <button> Take Test </button></a> </td>
+                    </tr>
+                {% endfor %}
+            </table>
+        </div>
+    </body>
 </html>
