--- a/templates/code_questions.html
+++ b/templates/code_questions.html
@@ -2,9 +2,138 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>{{ title }}</title>
+    <style type="text/css">
+            body {
+                margin:0;
+                margin-top:0;
+                padding:0;
+                top:0
+            }
+            div#header {
+                background:teal;
+                color:white;
+                font-family:Inconsolata,Constantia,Verdana,sans-serif;
+                font-size: 1em;
+                text-align: center;
+                line-height: 1;
+                padding:1%;
+            }
+            a#logoutLink {
+                text-decoration:none;
+                color:teal;
+                font-weight:bold;
+                font-size:0.8em;
+                background:white;
+                padding:2px;
+            }
+            a#logoutLink:hover {
+                text-decoration: underline;
+            }
+            #header table {
+                width:90%;
+            }
+            td.bigSpan {
+                text-indent:25%;
+                width: 90%;
+                vertical-align: bottom;
+            }
+            td.smallSpan{
+                vertical-align: bottom;
+                text-align: right;
+            }
+            div#content-main{
+                margin-left:5%;
+                margin-right:5%;
+                line-height:1.5;
+            }
+            a.linkButton{
+                text-decoration: none;
+                background:teal;
+                color:white;
+                font-weight:bold;
+                font-family:'Lucida Sans',Helvetica;
+                font-size:0.8em;
+                padding:3px 6px;
+                border-radius:10px;
+            }
+            table.tests_display {
+                width:75%;
+                padding:1%;
+            }
+            table.tests_display td{
+                text-align: center;
+                padding:0.5%;
+                border:2px solid black;
+            }
+            table.tests_display th{
+                background:teal;
+                font-size:1.1em;
+                color:white;
+                font-family:inherit;
+                padding:1%;
+            }
+            h4 {
+                text-decoration:underline;
+            }
+            p.error {
+                background:rgba(200,0,0,0.3);
+                color:black;
+                font-family:Constantia,sans-serif;
+                font-weight:bold;
+            }
+            p.result-block {
+                color:blue;
+                font-weight:bold;
+                font-size:1.2em;
+            }
+        </style>
 </head>
 <body>
-
+    <div id="header">
+        <table>
+            <tr>
+                <td align="center" class="bigSpan">
+                    <h2> Student Assessment </h2>
+                    <h3><u> Student Portal </u></h3>
+                </td>
+                <td align="right" class="smallSpan">
+                    <a href="logout" id="logoutLink">Logout {{ username }}</a>
+                </td>
+            </tr>
+        </table>
+    </div>
+    <div id="content-main">
+        <div id="question-div">
+            <h3> Question </h3>
+            <p> {{ question.question }} </p>
+        </div>
+        <div id="test-cases-div">
+            <h3> Example Test cases </h3>
+            <table border="1" width="50%">
+                <tr>
+                    <th> Input </th>
+                    <th> Expected Output</th>
+                </tr>
+                {% for test_case in test_cases %}
+                    <tr>
+                        <td> <pre> {{  test_case.input_data | safe }} </pre> </td>
+                        <td> <pre> {{  test_case.output_data | safe }} </pre> </td>
+                    </tr>
+                {% endfor %}
+            </table>
+        </div>
+        <p class="error"> {{ error }} </p>
+        <p class="result-block"> {{ status.name }} </p>
+        <div id="student-code">
+            <h3> Your Solution </h3>
+            <form method="post">
+                {% csrf_token %}
+                {{ form.as_p }}
+                <input type="submit" value="Submit">
+                <input type="button" value="Check">
+            </form>
+        </div>
+    </div>
 </body>
 </html>
