This commit creates a static folder with a css file.  All the css from html files have been removed and put in this css file. the css file is linked to all html files.

--- a/templates/faculty_create_code_test.html
+++ b/templates/faculty_create_code_test.html
@@ -3,101 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>Create Code Test</title>
-    <style type="text/css">
-        body {
-            margin:0;
-            margin-top:0;
-            padding:0;
-            top:0
-        }
-        div#header {
-            background:teal;
-            color:white;
-            font-family:Inconsolata,Constantia,Verdana,sans-serif;
-            font-size: 1em;
-            text-align: center;
-            line-height: 1;
-            padding:1%;
-        }
-        a#logoutLink {
-            text-decoration:none;
-            color:teal;
-            font-weight:bold;
-            font-size:0.8em;
-            background:white;
-            padding:2px;
-        }
-        a#logoutLink:hover {
-            text-decoration: underline;
-        }
-        #header table {
-            width:90%;
-        }
-        td.bigSpan {
-            text-indent:25%;
-            width: 90%;
-            vertical-align: bottom;
-        }
-        td.smallSpan{
-            vertical-align: bottom;
-            text-align: right;
-        }
-        div#content-main{
-            margin-left:5%;
-            margin-right:5%;
-            line-height:1.5;
-        }
-        a.linkButton{
-            text-decoration: none;
-            background:teal;
-            color:white;
-            font-weight:bold;
-            font-family:'Lucida Sans',Helvetica;
-            font-size:0.8em;
-            padding:3px 6px;
-            border-radius:10px;
-        }
-        div#sidePane{
-            background:teal;
-            float:left;
-            width:15%;
-            padding:2%;
-            margin-top:5%;
-            color:white;
-        }
-        div#workspace{
-            width:75%;
-            padding:2%;
-            margin-left:20%;
-        }
-        #workspace h4{
-            color:teal;
-            text-decoration: underline;
-            text-indent:5%;
-        }
-        #sidePane-questionsNav a {
-            text-decoration: none;
-            color:black;
-            font-weight:bold;
-        }
-        #sidePane-questionsNav td{
-            border:2px solid white;
-            text-align:center;
-            background:wheat;
-        }
-        #sidePane-questionsNav td:hover {
-            border:2px solid tomato;
-            cursor:pointer;
-        }
-        div#sidePane-buttons {
-            margin-top:5%;
-        }
-        #error{
-            color:red;
-            font-family:monospace;
-            font-weight:bold;
-            font-size:12pt;
-        }
+    {% load staticfiles %}
+    <link rel="stylesheet" type="text/css" href="{% static 'base.css' %}" />
     </style>
 </head>
 <body>
