--- a/templates/faculty_create_code_test.html
+++ b/templates/faculty_create_code_test.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>Create Code Test</title>
     {% load staticfiles %}
-    <link rel="stylesheet" type="text/css" href="{% static 'base.css' %}" />
+    <link rel="stylesheet" type="text/css" href="{% static 'css/base.css' %}" />
     </style>
 </head>
 <body>
