--- a/templates/faculty_create_code_test_v2.html
+++ b/templates/faculty_create_code_test_v2.html
@@ -11,7 +11,7 @@
         }
     </script>
     {% load staticfiles %}
-    <link rel="stylesheet" type="text/css" href="{% static 'base.css' %}" />
+    <link rel="stylesheet" type="text/css" href="{% static 'css/base.css' %}" />
 </head>
 <body>
     <div id="header">
