--- a/templates/student_portal.html
+++ b/templates/student_portal.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <title>Student Portal</title>
         {% load staticfiles %}
-        <link rel="stylesheet" type="text/css" href="{% static 'base.css' %}" />
+        <link rel="stylesheet" type="text/css" href="{% static 'css/base.css' %}" />
     </head>
     <body>
         <div id="header">
