--- a/templates/test_initiate.html
+++ b/templates/test_initiate.html
@@ -78,7 +78,7 @@
     </style>
     <title> {{ title }} </title>
     {% load staticfiles %}
-    <link rel="stylesheet" type="text/css" href="{% static 'base.css' %}" />
+    <link rel="stylesheet" type="text/css" href="{% static 'css/base.css' %}" />
 </head>
 <body>
     <div id="header">
