Added template code support

--- a/templates/faculty_create_code_test_v2.html
+++ b/templates/faculty_create_code_test_v2.html
@@ -60,6 +60,9 @@
                 {{ form.visible_test_case_input }}
                 {{ form.visible_test_case_output }}
 
+                <h4> Code Template </h4>
+                {{ form.template_code }}
+
                 <h4> Max Execution Time </h4>
                 {{ form.max_exec_time }}
                 <input type="submit" value="Save & Next">
