--- a/templates/code_questions.html
+++ b/templates/code_questions.html
@@ -5,6 +5,16 @@
     <title>{{ title }}</title>
     {% load staticfiles %}
     <link rel="stylesheet" type="text/css" href="{% static 'css/base.css' %}" />
+    <style type="text/css">
+        div#template-code {
+            background:#e3e3e3;
+            width:40%;
+            padding:1% 1% 1% 3%;
+        }
+        #template-code pre {
+            border-left: 3px solid darkgreen;
+        }
+    </style>
 </head>
 <body>
     <div id="header">
@@ -39,6 +49,12 @@
                     </tr>
                 {% endfor %}
             </table>
+            {% if question.template_code|length > 0 %}
+                <h3> Template Code </h3>
+                <div id="template-code">
+                    <pre> {{ question.template_code | safe }} </pre>
+                </div>
+            {% endif %}
         </div>
         <p class="error"> {{ error }} </p>
         <p class="result-block"> {{ status.name }} </p>
