--- a/templates/main.html
+++ b/templates/main.html
@@ -1,7 +1,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>{{ title }}</title>
+    <title> VIT University </title>
     {% load staticfiles %}
     <link rel="stylesheet" type="text/css" href="{% static 'css/base_1.css' %}" />
     <style type="text/css">
@@ -58,6 +58,10 @@
             background:wheat;
             color:black;
             border:2px solid wheat;
+        }
+        div#content {
+            background:none;
+            padding:0;
         }
     </style>
 </head>
