--- a/templates/code_questions.html
+++ b/templates/code_questions.html
@@ -63,8 +63,8 @@
             <form method="post">
                 {% csrf_token %}
                 {{ form.as_p }}
-                <input type="submit" value="Submit">
-                <input type="button" value="Check">
+                <input type="submit" value="Submit & Next" name="submit">
+                <input type="submit" value="Check" name="check">
             </form>
         </div>
     </div>
